# AgenticBuild

./: .env.example  .gitignore  GEMINI.md  README.md  clear_db.py  database.db  init_and_run.py  pyproject.toml
.gemini/: settings.json
.run/: AgenticBuildApp.run.xml  Backend.run.xml  Clear Local SqLite DB.run.xml  Frontend.run.xml
.streamlit/: credentials.toml
backend/app/: main.py
backend/app/api/: auth.py  routes.py
backend/app/core/: auth_utils.py  config.py
backend/app/models/: db.py  schemas.py
backend/app/services/: agent.py  llm_factory.py
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-04-26-agenticbuild-polish-plan.md  2026-04-26-readme-enhancement.md  2026-04-26-rebranding-migration.md  2026-04-26-v2-scaffolder-plan.md
docs/superpowers/specs/: 2026-04-26-agenticbuild-design.md  2026-04-26-readme-enhancement-design.md
frontend/: app.py
frontend/components/: auth_ui.py  chat_ui.py  sidebar.py
frontend/utils/: api_client.py
projects/skycast/: index.html
projects/weatherhub/: animations.js  index.html  script.js  styles.css  threeJSConfig.js  weatherAPI.js
tests/: test_agent.py  test_auth.py
