[project]
name = "agenticbuild"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
    "streamlit>=1.56.0",
    "streamlit-local-storage>=0.0.25",
    "uvicorn>=0.46.0",
]
